--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +291,7 @@
    ],
    "source": [
     "# TODO: Import any additional functionality you may need here\n",
-    "from sklearn.model_selection import ShuffleSplit\n",
+    "from sklearn.model_selection import train_test_split;\n",
     "\n",
     "# TODO: Set the number of training points\n",
     "num_train = 300\n",
@@ -299,28 +299,17 @@
     "# Set the number of testing points\n",
     "num_test = X_all.shape[0] - num_train\n",
     "\n",
-    "ssX = ShuffleSplit(n_splits=2, train_size=float(num_train)/ float(X_all.shape[0]),test_size=float(num_test)/float(X_all.shape[0]), random_state=0)\n",
-    "ssy = ShuffleSplit(n_splits=2, train_size=float(num_train)/ float(y_all.shape[0]),test_size=float(num_test)/float(y_all.shape[0]), random_state=0)\n",
     "\n",
-    "\n",
+    "#use train test split\n",
     "X_train = []\n",
     "X_test = []\n",
     "y_train = []\n",
     "y_test = []\n",
     "\n",
-    "# TODO: Shuffle and split the dataset into the number of training and testing points above\n",
-    "for train_index, test_index in ssX.split(X_all):\n",
-    "    X_train = X_all.reindex(train_index)\n",
-    "    X_test = X_all.reindex(test_index)\n",
-    "    y_train = y_all.reindex(train_index)\n",
-    "    y_test = y_all.reindex(test_index)\n",
-    "# Show the results of the split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, train_size=0.76, test_size=0.24, random_state=0)\n",
     "\n",
-    "\n",
-    "#print X_train[:5]\n",
-    "#print y_train[:5]\n",
-    "print \"Training set has {} samples.\".format(X_train.shape[0])\n",
-    "print \"Testing set has {} samples.\".format(X_test.shape[0])"
+    "print \"Training set has {} samples.\".format(len(X_train))\n",
+    "print \"Testing set has {} samples.\".format(len(X_test))"
    ]
   },
   {
@@ -404,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -467,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -476,24 +465,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "===================================\n",
+      "Decision Tree\n",
+      "===================================\n",
+      "-----------------------------\n",
+      "100 Elements:\n",
+      "-----------------------------\n",
+      "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7059.\n",
+      "-----------------------------\n",
+      "200 Elements:\n",
+      "-----------------------------\n",
+      "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7481.\n",
+      "-----------------------------\n",
+      "300 Elements:\n",
+      "-----------------------------\n",
+      "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7395.\n",
+      "===================================\n",
+      "Stochastic Gradient Descent\n",
+      "===================================\n",
+      "-----------------------------\n",
+      "100 Elements:\n",
+      "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0008 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
-      "F1 score for training set: 0.8025.\n",
-      "Made predictions in 0.0003 seconds.\n",
-      "F1 score for test set: 0.8077.\n",
+      "Trained model in 0.0000 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 0.7922.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7703.\n",
+      "-----------------------------\n",
+      "200 Elements:\n",
+      "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0008 seconds\n",
-      "Made predictions in 0.0002 seconds.\n",
-      "F1 score for training set: 0.7622.\n",
-      "Made predictions in 0.0005 seconds.\n",
-      "F1 score for test set: 0.8299.\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 0.7988.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7662.\n",
+      "-----------------------------\n",
+      "300 Elements:\n",
+      "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0012 seconds\n",
-      "Made predictions in 0.0007 seconds.\n",
-      "F1 score for training set: 0.0943.\n",
-      "Made predictions in 0.0003 seconds.\n",
-      "F1 score for test set: 0.0896.\n"
+      "Trained model in 0.0000 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 0.6917.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.6727.\n",
+      "===================================\n",
+      "SVC\n",
+      "===================================\n",
+      "-----------------------------\n",
+      "100 Elements:\n",
+      "-----------------------------\n",
+      "Training a SVC using a training set size of 100. . .\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 0.8591.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7838.\n",
+      "-----------------------------\n",
+      "200 Elements:\n",
+      "-----------------------------\n",
+      "Training a SVC using a training set size of 200. . .\n",
+      "Trained model in 0.0030 seconds\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for training set: 0.8693.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7755.\n",
+      "-----------------------------\n",
+      "300 Elements:\n",
+      "-----------------------------\n",
+      "Training a SVC using a training set size of 300. . .\n",
+      "Trained model in 0.0070 seconds\n",
+      "Made predictions in 0.0040 seconds.\n",
+      "F1 score for training set: 0.8692.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7586.\n"
      ]
     }
    ],
@@ -506,13 +567,12 @@
     "# from skearln import model_C\n",
     "from sklearn.svm import SVC\n",
     "\n",
+    "state = 20\n",
     "# TODO: Initialize the three models\n",
-    "clf_A = DecisionTreeClassifier(random_state=0)\n",
-    "clf_B = SGDClassifier(random_state = 0)\n",
-    "clf_C = SVC(random_state=0)\n",
+    "clf_A = DecisionTreeClassifier(random_state=state)\n",
+    "clf_B = SGDClassifier(random_state = state)\n",
+    "clf_C = SVC(random_state=state)\n",
     "\n",
-    "\n",
-    "clf_A.fit(X_train, y_train)\n",
     "\n",
     "# TODO: Set up the training set sizes\n",
     "X_train_100 = X_train[:100]\n",
@@ -525,9 +585,37 @@
     "y_train_300 = y_train[:300]\n",
     "\n",
     "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
+    "\n",
+    "print \"===================================\"\n",
+    "print \"Decision Tree\"\n",
+    "print \"===================================\"\n",
+    "print \"-----------------------------\\n100 Elements:\\n-----------------------------\"\n",
+    "train_predict(clf_A, X_train_100, y_train_100, X_test, y_test)\n",
+    "print \"-----------------------------\\n200 Elements:\\n-----------------------------\"\n",
+    "train_predict(clf_A, X_train_200, y_train_200, X_test, y_test)\n",
+    "print \"-----------------------------\\n300 Elements:\\n-----------------------------\"\n",
+    "train_predict(clf_A, X_train_300, y_train_300, X_test, y_test)\n",
+    "\n",
+    "print \"===================================\"\n",
+    "print \"Stochastic Gradient Descent\"\n",
+    "print \"===================================\"\n",
+    "print \"-----------------------------\\n100 Elements:\\n-----------------------------\"\n",
     "train_predict(clf_B, X_train_100, y_train_100, X_test, y_test)\n",
+    "print \"-----------------------------\\n200 Elements:\\n-----------------------------\"\n",
     "train_predict(clf_B, X_train_200, y_train_200, X_test, y_test)\n",
-    "train_predict(clf_B, X_train_300, y_train_300, X_test, y_test)"
+    "print \"-----------------------------\\n300 Elements:\\n-----------------------------\"\n",
+    "train_predict(clf_B, X_train_300, y_train_300, X_test, y_test)\n",
+    "\n",
+    "\n",
+    "print \"===================================\"\n",
+    "print \"SVC\"\n",
+    "print \"===================================\"\n",
+    "print \"-----------------------------\\n100 Elements:\\n-----------------------------\"\n",
+    "train_predict(clf_C, X_train_100, y_train_100, X_test, y_test)\n",
+    "print \"-----------------------------\\n200 Elements:\\n-----------------------------\"\n",
+    "train_predict(clf_C, X_train_200, y_train_200, X_test, y_test)\n",
+    "print \"-----------------------------\\n300 Elements:\\n-----------------------------\"\n",
+    "train_predict(clf_C, X_train_300, y_train_300, X_test, y_test)"
    ]
   },
   {
@@ -546,25 +634,25 @@
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |         .0009s          |     .0003s             |        1         |        .6500    |\n",
-    "| 200               |        .0014s           |     .0006s             |        1         |        .6721    |\n",
-    "| 300               |       .0023s            |     .0007s             |        1         |        .7154    |\n",
+    "| 100               |         .0010s          |     .0010s             |        1         |        0.7059   |\n",
+    "| 200               |        .0020s           |     .0000s             |        1         |        0.7481   |\n",
+    "| 300               |        .0030s           |     .0000s             |        1         |        0.7395   |\n",
     "\n",
-    "** Classifer 2 - ?**  \n",
-    "\n",
-    "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
-    "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |                         |                        |                  |                 |\n",
-    "| 200               |     EXAMPLE             |                        |                  |                 |\n",
-    "| 300               |                         |                        |                  |     EXAMPLE     |\n",
-    "\n",
-    "** Classifer 3 - ?**  \n",
+    "** Classifer 2 - Stochastic Gradient Descent**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |                         |                        |                  |                 |\n",
-    "| 200               |                         |                        |                  |                 |\n",
-    "| 300               |                         |                        |                  |                 |"
+    "| 100               |         .0000s          |     .0000s             |        0.7922         |        0.7703    |\n",
+    "| 200               |        .0010s           |     .0000s             |        0.7988         |        0.7662    |\n",
+    "| 300               |        .0010s           |     .0000s             |        0.6917         |        0.6727   |\n",
+    "\n",
+    "** Classifer 3 - Support Vector Machine**  \n",
+    "\n",
+    "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
+    "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
+    "| 100               |         .0010s          |     .0010s             |        0.8591         |        0.7838    |\n",
+    "| 200               |        .0030s           |     .0010s             |        0.8693         |        0.7755    |\n",
+    "| 300               |        .0050s           |     .0020s             |        0.8692         |        0.7586   |"
    ]
   },
   {
@@ -587,7 +675,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer:** Based on what I've seen in different simulation I ran with different changing the random state I will say Support vector machine is the best method for this problem, even though the training time and prediction time is higher than the other methods it shown on differnt states to have a better performance on the testing score, sometimes up to 5% to 7% more accuracy than the one following.\n",
+    "\n"
    ]
   },
   {
