Finishing code, missing fine tunning and some explanations

--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -367,16 +367,42 @@
     "\n",
     "\n",
     "### Stochastic Gradient Descent (SGDC)\n",
-    "- Describe one real-world application in industry where the model can be applied. *(You may need to do a small bit of research for this — give references!)* \n",
-    "- What are the strengths of the model; when does it perform well? \n",
-    "- What are the weaknesses of the model; when does it perform poorly?\n",
-    "- What makes this model a good candidate for the problem, given what you know about the data?\n",
+    "**Describe one real-world application in industry where the model can be applied. *(You may need to do a small bit of research for this — give references!)* **\n",
     "\n",
-    "### Support Vector Machines (SVN)\n",
-    "- Describe one real-world application in industry where the model can be applied. *(You may need to do a small bit of research for this — give references!)* \n",
-    "- What are the strengths of the model; when does it perform well? \n",
-    "- What are the weaknesses of the model; when does it perform poorly?\n",
-    "- What makes this model a good candidate for the problem, given what you know about the data?\n"
+    "Stochastic Gradient Descent is used quite frequently on Natural Language Processing and text classification, it has the advantage that can be scaled to for a large number of training examples and features.\n",
+    "\n",
+    "**What are the strengths of the model; when does it perform well? **\n",
+    "\n",
+    "The model is very efficient and it easy to implement\n",
+    "\n",
+    "**What are the weaknesses of the model; when does it perform poorly?**\n",
+    "\n",
+    "Some of the disadvanteges of this model is that is sensity to feature scaling and it requires a number of hiperparameters like for example the number of iterations\n",
+    "\n",
+    "**What makes this model a good candidate for the problem, given what you know about the data?**\n",
+    "\n",
+    "I believe this is good method to implement in this case because the number of feature is static and if it happens to have a good ammount of training points that can properly estimate a good model it will be probably the fastest method will have\n",
+    "\n",
+    "### Support Vector Machines (SVM)\n",
+    "**Describe one real-world application in industry where the model can be applied. *(You may need to do a small bit of research for this — give references!)* **\n",
+    "\n",
+    "Support Vector Machines are great for classifying information.\n",
+    "\n",
+    "**What are the strengths of the model; when does it perform well? **\n",
+    "\n",
+    "Some of the strengths of using SVM are:\n",
+    "\n",
+    "- Effective in high dimensional spaces\n",
+    "- It is memory efficient\n",
+    "- Are customizable, we have a wide variety of options we can customize our model to provide better results by using different kernel functions\n",
+    "\n",
+    "**What are the weaknesses of the model; when does it perform poorly? **\n",
+    "Some of the weeknesses of SVNs is that they do not provide directly probability estimates, and in order to provide this values it uses a very expensive method. Also it may perform poorly if the number of features is less that the number of samples\n",
+    "\n",
+    "\n",
+    "**What makes this model a good candidate for the problem, given what you know about the data?**\n",
+    "\n",
+    "I believe this is going to be the best method giving the nature of the problem, which is giving a number of features we have to determine if a student will graduate or not, we can see this is a type of classification, also as we noticed this method is not going to be too affected by the large number of features.\n"
    ]
   },
   {
@@ -456,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -473,16 +499,16 @@
       "-----------------------------\n",
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
       "Trained model in 0.0010 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0010 seconds.\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for test set: 0.7059.\n",
       "-----------------------------\n",
       "200 Elements:\n",
       "-----------------------------\n",
       "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0020 seconds\n",
-      "Made predictions in 0.0000 seconds.\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0000 seconds.\n",
       "F1 score for test set: 0.7481.\n",
@@ -491,7 +517,7 @@
       "-----------------------------\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
       "Trained model in 0.0010 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
+      "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0000 seconds.\n",
       "F1 score for test set: 0.7395.\n",
@@ -502,7 +528,7 @@
       "100 Elements:\n",
       "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0000 seconds\n",
+      "Trained model in 0.0010 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 0.7922.\n",
       "Made predictions in 0.0000 seconds.\n",
@@ -511,7 +537,7 @@
       "200 Elements:\n",
       "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0010 seconds\n",
+      "Trained model in 0.0000 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 0.7988.\n",
       "Made predictions in 0.0000 seconds.\n",
@@ -520,10 +546,10 @@
       "300 Elements:\n",
       "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0000 seconds\n",
+      "Trained model in 0.0010 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 0.6917.\n",
-      "Made predictions in 0.0000 seconds.\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for test set: 0.6727.\n",
       "===================================\n",
       "SVC\n",
@@ -544,16 +570,16 @@
       "Trained model in 0.0030 seconds\n",
       "Made predictions in 0.0020 seconds.\n",
       "F1 score for training set: 0.8693.\n",
-      "Made predictions in 0.0010 seconds.\n",
+      "Made predictions in 0.0020 seconds.\n",
       "F1 score for test set: 0.7755.\n",
       "-----------------------------\n",
       "300 Elements:\n",
       "-----------------------------\n",
       "Training a SVC using a training set size of 300. . .\n",
-      "Trained model in 0.0070 seconds\n",
-      "Made predictions in 0.0040 seconds.\n",
+      "Trained model in 0.0050 seconds\n",
+      "Made predictions in 0.0050 seconds.\n",
       "F1 score for training set: 0.8692.\n",
-      "Made predictions in 0.0010 seconds.\n",
+      "Made predictions in 0.0020 seconds.\n",
       "F1 score for test set: 0.7586.\n"
      ]
     }
@@ -675,7 +701,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** Based on what I've seen in different simulation I ran with different changing the random state I will say Support vector machine is the best method for this problem, even though the training time and prediction time is higher than the other methods it shown on differnt states to have a better performance on the testing score, sometimes up to 5% to 7% more accuracy than the one following.\n",
+    "**Answer:** Based on what I've seen in different simulation I ran with different changing the random state I will say Support Vector Machine is the best method for this problem, even though the training time and prediction time is higher than the other methods it shown on differnt states to have a better performance on the testing score, sometimes up to 5% to 7% more accuracy than the one following.\n",
     "\n"
    ]
   },
@@ -691,7 +717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer:** I believe that the "
    ]
   },
   {
@@ -712,28 +738,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Made predictions in 0.0020 seconds.\n",
+      "Tuned model has a training F1 score of 0.8421.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "Tuned model has a testing F1 score of 0.7826.\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Import 'GridSearchCV' and 'make_scorer'\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import make_scorer\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
     "\n",
     "# TODO: Create the parameters list you wish to tune\n",
-    "parameters = None\n",
+    "parameters = { 'kernel': ['linear']}\n",
     "\n",
     "# TODO: Initialize the classifier\n",
-    "clf = None\n",
+    "clf = SVC(random_state=20)\n",
     "\n",
     "# TODO: Make an f1 scoring function using 'make_scorer' \n",
-    "f1_scorer = None\n",
+    "f1_scorer = make_scorer(f1_score, pos_label=\"yes\")\n",
+    "\n",
     "\n",
     "# TODO: Perform grid search on the classifier using the f1_scorer as the scoring method\n",
-    "grid_obj = None\n",
+    "grid_obj = GridSearchCV(clf, param_grid=parameters, scoring=f1_scorer)\n",
     "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
-    "grid_obj = None\n",
+    "grid_obj = grid_obj.fit(X_train, y_train)\n",
     "\n",
     "# Get the estimator\n",
     "clf = grid_obj.best_estimator_\n",
