--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -306,7 +306,9 @@
     "y_train = []\n",
     "y_test = []\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, train_size=0.76, test_size=0.24, random_state=0)\n",
+    "state = 5\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, train_size=0.76, test_size=0.24, random_state=state)\n",
     "\n",
     "print \"Training set has {} samples.\".format(len(X_train))\n",
     "print \"Testing set has {} samples.\".format(len(X_test))"
@@ -419,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -482,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -499,10 +501,10 @@
       "-----------------------------\n",
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
       "Trained model in 0.0010 seconds\n",
-      "Made predictions in 0.0000 seconds.\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.7059.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7680.\n",
       "-----------------------------\n",
       "200 Elements:\n",
       "-----------------------------\n",
@@ -511,16 +513,16 @@
       "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.7481.\n",
+      "F1 score for test set: 0.6774.\n",
       "-----------------------------\n",
       "300 Elements:\n",
       "-----------------------------\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0010 seconds\n",
+      "Trained model in 0.0020 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.7395.\n",
+      "F1 score for test set: 0.6935.\n",
       "===================================\n",
       "Stochastic Gradient Descent\n",
       "===================================\n",
@@ -528,29 +530,29 @@
       "100 Elements:\n",
       "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0010 seconds\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for training set: 0.8242.\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for training set: 0.7922.\n",
-      "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.7703.\n",
+      "F1 score for test set: 0.8026.\n",
       "-----------------------------\n",
       "200 Elements:\n",
       "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0000 seconds\n",
-      "Made predictions in 0.0000 seconds.\n",
-      "F1 score for training set: 0.7988.\n",
-      "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.7662.\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for training set: 0.8119.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7821.\n",
       "-----------------------------\n",
       "300 Elements:\n",
       "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0010 seconds\n",
+      "Trained model in 0.0020 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for training set: 0.6917.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.6727.\n",
+      "F1 score for training set: 0.7943.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7273.\n",
       "===================================\n",
       "SVC\n",
       "===================================\n",
@@ -558,29 +560,29 @@
       "100 Elements:\n",
       "-----------------------------\n",
       "Training a SVC using a training set size of 100. . .\n",
-      "Trained model in 0.0010 seconds\n",
+      "Trained model in 0.0030 seconds\n",
       "Made predictions in 0.0010 seconds.\n",
-      "F1 score for training set: 0.8591.\n",
+      "F1 score for training set: 0.8519.\n",
       "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.7838.\n",
+      "F1 score for test set: 0.7898.\n",
       "-----------------------------\n",
       "200 Elements:\n",
       "-----------------------------\n",
       "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0030 seconds\n",
+      "Trained model in 0.0060 seconds\n",
+      "Made predictions in 0.0030 seconds.\n",
+      "F1 score for training set: 0.8616.\n",
       "Made predictions in 0.0020 seconds.\n",
-      "F1 score for training set: 0.8693.\n",
-      "Made predictions in 0.0020 seconds.\n",
-      "F1 score for test set: 0.7755.\n",
+      "F1 score for test set: 0.7867.\n",
       "-----------------------------\n",
       "300 Elements:\n",
       "-----------------------------\n",
       "Training a SVC using a training set size of 300. . .\n",
-      "Trained model in 0.0050 seconds\n",
+      "Trained model in 0.0060 seconds\n",
       "Made predictions in 0.0050 seconds.\n",
-      "F1 score for training set: 0.8692.\n",
-      "Made predictions in 0.0020 seconds.\n",
-      "F1 score for test set: 0.7586.\n"
+      "F1 score for training set: 0.8764.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7660.\n"
      ]
     }
    ],
@@ -593,7 +595,7 @@
     "# from skearln import model_C\n",
     "from sklearn.svm import SVC\n",
     "\n",
-    "state = 20\n",
+    "#state = 10\n",
     "# TODO: Initialize the three models\n",
     "clf_A = DecisionTreeClassifier(random_state=state)\n",
     "clf_B = SGDClassifier(random_state = state)\n",
@@ -660,25 +662,25 @@
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |         .0010s          |     .0010s             |        1         |        0.7059   |\n",
-    "| 200               |        .0020s           |     .0000s             |        1         |        0.7481   |\n",
-    "| 300               |        .0030s           |     .0000s             |        1         |        0.7395   |\n",
+    "| 100               |         .0020s          |     .0010s             |        1         |        0.7680   |\n",
+    "| 200               |        .0040s           |     .0010s             |        1         |        0.6774   |\n",
+    "| 300               |        .0010s           |     .0010s             |        1         |        0.6935   |\n",
     "\n",
     "** Classifer 2 - Stochastic Gradient Descent**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |         .0000s          |     .0000s             |        0.7922         |        0.7703    |\n",
-    "| 200               |        .0010s           |     .0000s             |        0.7988         |        0.7662    |\n",
-    "| 300               |        .0010s           |     .0000s             |        0.6917         |        0.6727   |\n",
+    "| 100               |         .0010s          |     .0010s             |        0.8242         |        0.8026    |\n",
+    "| 200               |        .0010s           |     .0000s             |        0.8119         |        0.7821    |\n",
+    "| 300               |        .0010s           |     .0000s             |        0.7943         |        0.7273   |\n",
     "\n",
     "** Classifer 3 - Support Vector Machine**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |         .0010s          |     .0010s             |        0.8591         |        0.7838    |\n",
-    "| 200               |        .0030s           |     .0010s             |        0.8693         |        0.7755    |\n",
-    "| 300               |        .0050s           |     .0020s             |        0.8692         |        0.7586   |"
+    "| 100               |         .0020s          |     .0010s             |        0.8591         |        0.7898    |\n",
+    "| 200               |        .0040s           |     .0010s             |        0.8616         |        0.7867    |\n",
+    "| 300               |        .0060s           |     .0020s             |        0.8764         |        0.7660   |"
    ]
   },
   {
@@ -738,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -747,10 +749,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0020 seconds.\n",
-      "Tuned model has a training F1 score of 0.8421.\n",
-      "Made predictions in 0.0000 seconds.\n",
-      "Tuned model has a testing F1 score of 0.7826.\n"
+      "{'kernel': ['rbf', 'poly'], 'C': [1, 10, 100, 1000], 'degree': [2, 3, 4], 'gamma': [0.01, 0.0001]}\n",
+      "Made predictions in 0.0040 seconds.\n",
+      "Tuned model has a training F1 score of 0.8323.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "Tuned model has a testing F1 score of 0.7973.\n"
      ]
     }
    ],
@@ -762,10 +765,12 @@
     "\n",
     "\n",
     "# TODO: Create the parameters list you wish to tune\n",
-    "parameters = { 'kernel': ['linear']}\n",
+    "parameters = { 'kernel': ['rbf','poly'], 'C': [1,10,100,1000], 'gamma': [1e-2,1e-4], 'degree': [2,3,4]}\n",
+    "\n",
+    "print parameters\n",
     "\n",
     "# TODO: Initialize the classifier\n",
-    "clf = SVC(random_state=20)\n",
+    "clf = SVC(random_state=state)\n",
     "\n",
     "# TODO: Make an f1 scoring function using 'make_scorer' \n",
     "f1_scorer = make_scorer(f1_score, pos_label=\"yes\")\n",
@@ -797,7 +802,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: ** After testing the best score I could come up with was for the training and testing score respectively 0.8323 and 0.7973, this is a little bettter than the score I got for the untuned model which were 0.8764 and 0.7660 for training and testing score."
    ]
   },
   {
@@ -812,7 +817,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -826,7 +831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
