Adding feedback from the second review - Third Submit

--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +308,7 @@
     "\n",
     "state = 5\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, train_size=0.76, test_size=0.24, random_state=state)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, test_size=95, random_state=state, stratify = y_all)\n",
     "\n",
     "print \"Training set has {} samples.\".format(len(X_train))\n",
     "print \"Testing set has {} samples.\".format(len(X_test))"
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -500,29 +500,29 @@
       "100 Elements:\n",
       "-----------------------------\n",
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0010 seconds\n",
-      "Made predictions in 0.0000 seconds.\n",
+      "Trained model in 0.0000 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.7680.\n",
+      "F1 score for test set: 0.7481.\n",
       "-----------------------------\n",
       "200 Elements:\n",
       "-----------------------------\n",
       "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
       "Trained model in 0.0010 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.6774.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7846.\n",
       "-----------------------------\n",
       "300 Elements:\n",
       "-----------------------------\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0010 seconds\n",
+      "Trained model in 0.0020 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.6935.\n",
+      "F1 score for test set: 0.7167.\n",
       "===================================\n",
       "Stochastic Gradient Descent\n",
       "===================================\n",
@@ -531,28 +531,28 @@
       "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 100. . .\n",
       "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 0.8250.\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for training set: 0.8242.\n",
-      "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.8026.\n",
+      "F1 score for test set: 0.7972.\n",
       "-----------------------------\n",
       "200 Elements:\n",
       "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 200. . .\n",
       "Trained model in 0.0010 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for training set: 0.8119.\n",
-      "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.7821.\n",
+      "F1 score for training set: 0.7988.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.8456.\n",
       "-----------------------------\n",
       "300 Elements:\n",
       "-----------------------------\n",
       "Training a SGDClassifier using a training set size of 300. . .\n",
       "Trained model in 0.0010 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for training set: 0.7943.\n",
+      "F1 score for training set: 0.0580.\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.7273.\n",
+      "F1 score for test set: 0.0606.\n",
       "===================================\n",
       "SVC\n",
       "===================================\n",
@@ -561,28 +561,28 @@
       "-----------------------------\n",
       "Training a SVC using a training set size of 100. . .\n",
       "Trained model in 0.0010 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for training set: 0.8519.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.7898.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 0.8589.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.8077.\n",
       "-----------------------------\n",
       "200 Elements:\n",
       "-----------------------------\n",
       "Training a SVC using a training set size of 200. . .\n",
       "Trained model in 0.0030 seconds\n",
       "Made predictions in 0.0020 seconds.\n",
-      "F1 score for training set: 0.8616.\n",
-      "Made predictions in 0.0020 seconds.\n",
-      "F1 score for test set: 0.7867.\n",
+      "F1 score for training set: 0.8571.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.8052.\n",
       "-----------------------------\n",
       "300 Elements:\n",
       "-----------------------------\n",
       "Training a SVC using a training set size of 300. . .\n",
-      "Trained model in 0.0060 seconds\n",
+      "Trained model in 0.0050 seconds\n",
       "Made predictions in 0.0040 seconds.\n",
-      "F1 score for training set: 0.8764.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.7660.\n"
+      "F1 score for training set: 0.8590.\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for test set: 0.8163.\n"
      ]
     }
    ],
@@ -662,25 +662,25 @@
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |         .0020s          |     .0010s             |        1         |        0.7680   |\n",
-    "| 200               |        .0040s           |     .0010s             |        1         |        0.6774   |\n",
-    "| 300               |        .0010s           |     .0010s             |        1         |        0.6935   |\n",
+    "| 100               |         .0000s          |     .0010s             |        1         |        0.7481   |\n",
+    "| 200               |        .0010s           |     .0010s             |        1         |        0.7846   |\n",
+    "| 300               |        .0020s           |     .0000s             |        1         |        0.7167   |\n",
     "\n",
     "** Classifer 2 - Stochastic Gradient Descent**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |         .0010s          |     .0010s             |        0.8242         |        0.8026    |\n",
-    "| 200               |        .0010s           |     .0000s             |        0.8119         |        0.7821    |\n",
-    "| 300               |        .0010s           |     .0000s             |        0.7943         |        0.7273   |\n",
+    "| 100               |         .0010s          |     .0000s             |        0.8250         |        0.7972    |\n",
+    "| 200               |        .0010s           |     .0010s             |        0.7988         |        0.8456    |\n",
+    "| 300               |        .0010s           |     .0000s             |        0.0580         |        0.0606   |\n",
     "\n",
     "** Classifer 3 - Support Vector Machine**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |         .0020s          |     .0010s             |        0.8591         |        0.7898    |\n",
-    "| 200               |        .0040s           |     .0010s             |        0.8616         |        0.7867    |\n",
-    "| 300               |        .0060s           |     .0020s             |        0.8764         |        0.7660   |"
+    "| 100               |         .0010s          |     .0000s             |        0.8589         |        0.8077    |\n",
+    "| 200               |        .0030s           |     .0010s             |        0.8571         |        0.8052    |\n",
+    "| 300               |        .0050s           |     .0020s             |        0.8590         |        0.8163   |"
    ]
   },
   {
@@ -719,9 +719,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** The problem we are facing is that we need given a number of variables we need to define if a student is likely to pass or not, the model that we created considers and weights all these variables and based on that makes an educated decision, the way it works is by creating a \"border\" between the students that will pass and the students that will not pass and it puts them on one group or the other. Needless to say that the students that are close to the \"border\" on either side they are likely to need help in the future.\n",
+    "**Answer:** The problem we are facing is that we need given a number of variables we need to define if a student is likely to pass or not, the model that we created considers and weights all these variables and based on that makes an educated decision, the way it works is by creating a \"border\" between the students that will pass and the students that will not pass and it puts them on one group or the other. Needless to say that the students that are close to the \"border\" may or may not need help but, but the most important is the group on the need help side that are far from the \"border\" because they definitively will need help.\n",
     "\n",
-    "As additional note the implementation of the \"border\" is made so it tryies to create the maximum possible distance between the students on both sides but given the number of variables that is something that is hard to tell on a graph."
+    "As additional note the implementation of the \"border\" is made through somthing call kernel, this will help us know what shape of the border in case that one of the groups is surrounded by the other, for example lets say that the students inside a circle are the student who are going to pass in that case the model will understand that the limit is just an area inside a circle. The same is true with weird shapes more complicated than a circle and with more elements"
    ]
   },
   {
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -751,10 +751,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0030 seconds.\n",
-      "Tuned model has a training F1 score of 0.8136.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "Tuned model has a testing F1 score of 0.8000.\n"
+      "Made predictions in 0.0040 seconds.\n",
+      "Tuned model has a training F1 score of 0.8421.\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "Tuned model has a testing F1 score of 0.8299.\n"
      ]
     }
    ],
@@ -808,7 +808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** After testing the best score I could come up with was for the training and testing score respectively 0.8323 and 0.7973, this is a little bettter than the score I got for the untuned model which were 0.8136 and 0.8000 for training and testing score."
+    "**Answer: ** After testing the best score I could come up with was for the training and testing score respectively 0.8421 and 0.8299, this is a little bettter than the score I got for the untuned model which were 0.8589 and 0.8163 for training and testing score."
    ]
   },
   {
