--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -719,9 +719,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** The problem we are facing is that we need given a number of variables we need to define if a student is likely to pass or not, the model that we created considers and weights all these variables and based on that makes an educated decision, the way it works is by creating a \"border\" between the students that will pass and the students that will not pass and it puts them on one group or the other. Needless to say that the students that are close to the \"border\" may or may not need help but, but the most important is the group on the need help side that are far from the \"border\" because they definitively will need help.\n",
+    "**Answer:** The problem we are facing is that we need given a number of variables we need to define if a student is likely to pass or not, the model that we created considers and weights all these variables and based on that makes an educated decision, the way it works is by creating a \"border\" between the students that will pass and the students that will not pass and it puts them on one group or the other. Needless to say that the students that are close to the \"border\" may or may not need help but, but the most important is the group on the need help side that are far from the \"border\" because they definitively will need help. Also it is worth mentioning that the algorithm creates the \"border\" trying to make the gap between the two groups as wide as possible.\n",
     "\n",
-    "As additional note the implementation of the \"border\" is made through somthing call kernel, this will help us know what shape of the border in case that one of the groups is surrounded by the other, for example lets say that the students inside a circle are the student who are going to pass in that case the model will understand that the limit is just an area inside a circle. The same is true with weird shapes more complicated than a circle and with more elements"
+    "This implementation also allow us to work with non-linear classification, through something call kernel trick, which can be understood as a function that converts our data into values easier for the computer to work with and to classify it, by using well known functions for polynomial expression, radial functions(i.e. Circles, ellipses, etc.), or others."
    ]
   },
   {
